# kernels

./: README.md  pyproject.toml
kernels/: bench.py  matmul_dense_bf16.py  matmul_dense_bf16_tile.py  matmul_dense_bf16_triton.py  rms_norm.py  scalar_mul.py  scalar_mul_tile.py
